 - Switch: Option to use built-in brightness sensor for Boktai
 - Ports: Ability to enable or disable all SGB features (closes mgba.io/i/1205)
 - Ports: Ability to crop SGB borders off screen (closes mgba.io/i/1204)
 - Cheats: Add support for loading Libretro-style cht files
 - GBA Cheats: Add support for loading EZ Flash-style cht files
 - Support for unlicensed Wisdom Tree Game Boy mapper
Emulation fixes:
 - GBA: All IRQs have 7 cycle delay (fixes mgba.io/i/539, mgba.io/i/1208)
 - GBA: Reset now reloads multiboot ROMs
 - GBA BIOS: Fix multiboot entry point (fixes Magic Floor)
 - GB Video: Delay LYC STAT check (fixes mgba.io/i/1331)
 - GB Video: Fix window being enabled mid-scanline (fixes mgba.io/i/1328)
 - GB I/O: Filter IE top bits properly (fixes mgba.io/i/1329)
 - GBA Video: Fix wrapped sprite mosaic clamping (fixes mgba.io/i/1432)
 - GBA Memory: Fix STM to VRAM (fixes mgba.io/i/1430)
 - GB Audio: Only reset channel 3 sample in DMG mode
 - GB Audio: Sample inactive channels (fixes mgba.io/i/1455, mgba.io/i/1456)
 - GB Video: Increment BCPS/OCPS even in mode 3 (fixes mgba.io/i/1462)
 - GB Audio: Deschedule channel 3 when disabled (fixes mgba.io/i/1463)
 - GB Audio: Deschedule channel 1 when disabled by sweep (fixes mgba.io/i/1467)
 - GBA Memory: Fix STM/LDM to invalid VRAM
 - GB: Fix savedata initialization (fixes mgba.io/i/1473, mgba.io/i/1478)
 - GB Memory: Better emulate 0xFEA0 region on DMG, MGB and AGB
 - GB Printer: Reset printer buffer index after printing
Other fixes:
 - Qt: Fix some Qt display driver race conditions
 - Core: Improved lockstep driver reliability (Le Hoang Quyen)
 - Switch: Fix threading-related crash on second launch
 - Qt: Fix FPS target maxing out at 59.727 (fixes mgba.io/i/1421)
 - Core: Fix crashes if core directories aren't set
 - Qt: Fix menu bar staying hidden in full screen (fixes mgba.io/i/317)
 - GB SIO: Fix lockstep failing games aren't reloaded
 - Core: Fix crash when exiting game with cheats loaded