@@ -18,6 +18,7 @@ Features:
  - Cheats: Add support for loading Libretro-style cht files
  - GBA Cheats: Add support for loading EZ Flash-style cht files
  - Support for unlicensed Wisdom Tree Game Boy mapper
+ - Qt: Add export button for tile view (closes mgba.io/i/1507)
 Emulation fixes:
  - GBA: All IRQs have 7 cycle delay (fixes mgba.io/i/539, mgba.io/i/1208)
  - GBA: Reset now reloads multiboot ROMs
